LOG of the CHANGES in the package OjaNP

Version 0.9-10:
* removed the 'register' keyword from the C++ code

Version 0.9-9:
* Second implementation of an exact algorithm by Oleksii Pokotylo and Karl Mosler added
* Maintainer change from Klaus Nordhausen to Daniel Fischer

Version 0.9-8:
* Fixed Valgrind warnings

Version 0.9-7:
* Fixed several C++ warnings
* changed maintainer email

Version 0.9-6:
* #define R_NO_REMAP added to data.h in order to fix some error handling on MacOS

Version 0.9-5:

* all references to standard c++ output and error handling removed

Version 0.9-4:

* adressing some compatility issues with sun compilers
* making the change log file also visible on the the CRAN pages
* new function ojaCsampleTest

Version 0.9-3:

* minor changes in examples and documentation

Version 0.9-2:

* first version released on CRAN 